supermenu: only highlight right/bottom border to avoid shifting image

--- a/js9.css
+++ b/js9.css
@@ -227,7 +227,10 @@ div.JS9Progress {
 }/* the commands inside a console */
 
 .JS9Highlight {
-  border: solid 2px #00FF00;
+  border-top: solid 0px #00FF00;
+  border-right: solid 2px #00FF00;
+  border-bottom: solid 2px #00FF00;
+  border-left: solid 0px #00FF00;
 }
 
 .JS9CmdForm {
